--- a/index.html
+++ b/index.html
@@ -8,39 +8,77 @@
     body {
       font-family: Arial, sans-serif;
       background: #f5f5f5;
-      text-align: center;
-      padding: 50px;
+      margin: 0;
+      padding: 0;
+      height: 100vh; /* full screen */
+      display: flex;
+      flex-direction: column;
+      justify-content: center; /* vertical center */
     }
-    h1 { margin-bottom: 30px; }
+
+    .container {
+      display: flex;
+      align-items: center;  /* vertical align items */
+      justify-content: space-between; /* title left, icons right */
+      padding: 0 50px;
+    }
+
+    h1 {
+      text-align: left;
+      margin: 0;
+    }
+
     .icons {
       display: flex;
-      justify-content: center;
       gap: 30px;
     }
+
     .icon {
       font-size: 60px;
       color: #444;
       transition: transform 0.3s, color 0.3s;
     }
-    .icon:hover {
-      transform: scale(1.2) rotate(10deg);
+
+    /* Example different animations */
+    .icon.scale:hover {
+      transform: scale(1.3);
       color: #007bff;
+    }
+
+    .icon.rotate:hover {
+      transform: rotate(20deg);
+      color: #e91e63;
+    }
+
+    .icon.bounce:hover {
+      transform: translateY(-10px);
+      color: #4caf50;
+    }
+
+    .icon.spin:hover {
+      transform: rotate(360deg);
+      color: #ff9800;
     }
   </style>
 </head>
 <body>
-  <h1>Welcome to My Learning Class 🚀</h1>
-  <p>Click an icon to visit the resource:</p>
-  <div class="icons">
-    <a href="https://scratch.mit.edu" target="_blank">
-      <i class="fab fa-scratch icon"></i>
-    </a>
-    <a href="https://www.khanacademy.org" target="_blank">
-      <i class="fas fa-graduation-cap icon"></i>
-    </a>
-    <a href="https://www.code.org" target="_blank">
-      <i class="fas fa-laptop-code icon"></i>
-    </a>
+  <div class="container">
+    <h1>Welcome to My Learning Class 🚀</h1>
+    <div class="icons">
+      <a href="https://scratch.mit.edu" target="_blank">
+        <i class="fab fa-scratch icon scale"></i>
+      </a>
+      <a href="https://www.khanacademy.org" target="_blank">
+        <i class="fas fa-graduation-cap icon rotate"></i>
+      </a>
+      <a href="https://www.code.org" target="_blank">
+        <i class="fas fa-laptop-code icon bounce"></i>
+      </a>
+      <a href="https://www.youtube.com" target="_blank">
+        <i class="fab fa-youtube icon spin"></i>
+      </a>
+    </div>
   </div>
 </body>
+
 </html>
